--- a/portfolio/portfolio-websites/Gemiddelde berekenen/style.css
+++ b/portfolio/portfolio-websites/Gemiddelde berekenen/style.css
@@ -18,13 +18,17 @@ input {
 }
 
 [coolbutton] {
-    background-color: #fff;
+    background-color: #666;
     margin-top: 10px;
     width: 200px;
     height: 50px;
     font-size: 20pt;
     border-radius: 1000px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+[coolbutton]:hover {
+    background-color: #333;
 }
 
 p {
@@ -34,6 +38,14 @@ p {
 .result {
     background: #fff;
     border-radius: 5px;
-    width: 200px;
+    width: 100px;
     height: 50px;
+    padding-top: 15px;
+    margin-left: calc(50% - (100px / 2));
+    font-size: 20pt;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+textarea {
+    resize:none;
 }
