--- a/portfolio/portfolio-websites/Gemiddelde berekenen/style.css
+++ b/portfolio/portfolio-websites/Gemiddelde berekenen/style.css
@@ -36,7 +36,7 @@ p {
 }
 
 .result {
-    background: #fff;
+    background: #666;
     border-radius: 5px;
     width: 100px;
     height: 50px;
@@ -44,8 +44,12 @@ p {
     margin-left: calc(50% - (100px / 2));
     font-size: 20pt;
     font-family: Arial, Helvetica, sans-serif;
+    color: white;
 }
+
 
 textarea {
     resize:none;
+    background: #666;
+    color: white;
 }
