--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,28 +1,74 @@
+/*
+
+        START BASIC STYLING
+        (bg, font-family, default margin and padding enz.)
+
+*/
+
 * {
     font-family:  Arial, Helvetica, sans-serif;
     margin: 10px;
     padding: 5px;
 }
 
-.portfolio-show {
-    border: 1px solid black;
-    border-radius: 5pt;
-    height: 50vh;
-    padding: 5px;
+body {
+        --s: 100px; /* control the size */
+        --c1: #edf3e0;
+        --c2: #fdffe0;
+        
+        --_s: calc(2*var(--s)) calc(2*var(--s));
+        --_g: var(--_s) conic-gradient(at 40% 40%,#0000 75%,var(--c1) 0);
+        --_p: var(--_s) conic-gradient(at 20% 20%,#0000 75%,var(--c2) 0);
+        background:
+        calc( .9*var(--s)) calc( .9*var(--s))/var(--_p),
+        calc(-.1*var(--s)) calc(-.1*var(--s))/var(--_p),
+        calc( .7*var(--s)) calc( .7*var(--s))/var(--_g),
+        calc(-.3*var(--s)) calc(-.3*var(--s))/var(--_g),
+        conic-gradient(from 90deg at 20% 20%,var(--c2) 25%,var(--c1) 0) 0 0/var(--s) var(--s);
 }
 
-.portfolio-show > a{
+
+/* Upper text styling */
+
+.intro {
+    border-radius: 5pt;
+    background-color: rgb(255, 136, 136);
+    box-shadow: 10px 10px 1em black;
+}
+
+/* Portfolio space styling */
+
+.portfolio-show {
+    border: 1px solid black;  
+    border-radius: 5pt;
+    height: calc(38vh + 5px);
+    padding: 5px;
+    background-color: rgb(248, 245, 220);
+    box-shadow: 10px 10px 1em black;
+    display: grid;
+    grid-template-columns: 400px 400px;
+    column-gap: 120px;
+}
+
+
+.portfolio-show > a {
     margin: 0;
     padding: 0;
-    width: 500px;
-    height: 400px;
+    width: 100%;
+    height: 100%;
     display: block;
-}
+}    
+
+/* All portfolio tile styling
+    NB: This is for EVERY tile
+    Every tile is marked with:
+    '.tile1' '.tile2' enz.
+*/
 
 .portfolio-tile {
-    margin: 0;
+    margin: 5px;
     width: 500px;
-    height: 400px;
+    height: 37.5vh;
     background: aliceblue;
     border: 1px solid black;
     border-radius: 5pt;
@@ -30,17 +76,67 @@
     overflow: hidden;
 }
 
+/* Website image styling */
+
+#image {
+    position: relative;
+    width: 500px;
+    height: 300px;
+    padding: 0;
+    margin: 0;
+    z-index: 0;
+}
+
+/* Link style cancelling */
+
+a{
+    color: #000;
+    text-decoration: none;
+}
+
+/* On hover the style appears */
+
+a:hover {
+    text-decoration: underline;
+}
+
+
+/* Style of every desc (title and desc) */
+
 .portfolio-desc {
     border-top: 1px solid black;
     width: 100%;
     margin: 0;
     padding: 0;
-    height: 100px;
+    height: 20px;
+    
+    position: relative;
+    
 }
 
-.portfolio-tile > img {
-    position: relative;
-    width:500px;
-    padding: 0;
-    margin: 0;
+/* Individual tile styling */
+
+.tile1 {
+    background-color: #333;   
+}
+
+/* Desc in the individual tiles*/
+
+.tile1 > a > .portfolio-desc {
+    box-shadow: 0 30px 100px white;
+    /* Makes sure the box-shadow is above the image*/
+    z-index: 1;
+}
+
+.tile2 > a > .portfolio-desc {
+    box-shadow: 0 30px 100px black;
+    /* Makes sure the box-shadow is above the image*/
+    z-index: 1;
+}
+
+
+/*Makes sure that the desc stays white*/
+.portfolio-desc {
+    background-color: aliceblue;
+    height: 100%;
 }
