--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -62,7 +62,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100%;
+    max-height: 100px;
     display: block;
 }    
 
@@ -111,14 +111,13 @@ a:hover {
 /* Style of every desc (title and desc) */
 
 .portfolio-desc {
+    height: 55px;
     border-top: 1px solid black;
     width: 100%;
     margin: 0;
     padding: 0;
-    height: 20px;
-    
+    display:block;
     position: relative;
-    
 }
 
 /* Individual tile styling */
@@ -154,5 +153,4 @@ a:hover {
 /*Makes sure that the desc stays white*/
 .portfolio-desc {
     background-color: aliceblue;
-    height: 100%;
 }
