--- a/portfolio/portfolio-websites/Gemiddelde-berekenen/style.css
+++ b/portfolio/portfolio-websites/Gemiddelde-berekenen/style.css
@@ -1,3 +1,15 @@
+/* Adding Open Sans font */
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+* {
+    font-family:  "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+}
+
 * {
     color: #ffffffff;
     margin-top: 5px;
@@ -18,7 +30,7 @@ input {
 }
 
 [coolbutton] {
-    background-color: #666;
+    background-color: #fff;
     margin-top: 10px;
     width: 200px;
     height: 50px;
@@ -28,7 +40,7 @@ input {
 }
 
 [coolbutton]:hover {
-    background-color: #333;
+    background-color: #666;
 }
 
 p {
