--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,3 +1,15 @@
+/* Adding Open Sans font */
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+* {
+    font-family:  "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+}
+
 /* Defining colours */
 * {
     --blue-green: #219EBC;
@@ -19,7 +31,7 @@
 
 
 * {
-    font-family:  Arial, Helvetica, sans-serif;
+    
     margin: 0px;
     padding: 0px;
 }
