V 0.1.8 - HorstAndr Portfolio - 21 feb. 2024
It's finally here! Smooth button animations on the homepage! There is a new color theme for every application, and they change! Calculate average also got an update, the buttons are now uniform and there is an English option!

New changes:
1. Made the hover animations look smoother on the homepage.
2. Made the button in 'Gemiddelde berekenen' yellow when selecting.
3. Updated the picture of 'Gemiddelde berekenen' on the homepage.
4. Edited the error message in 'Gemiddelde berekenen' from an alert to the field being empty.
5. Made the 'Gemiddelde berekenen' 'Bereken' button blue and dark blue on press.
6. Added a language switcher on the top right side of 'Gemiddelde berekenen'.
7. Changed the hover effects on the homepage to get along with the new colour scheme in 'Gemiddelde berekenen'.
8. Changed the default link from 'nl' to 'en' to match the image.
9. Changed the Calculate Average text on the homepage to only contain English.
10. Renamed all the Calculate Average files to English.

--- a/portfolio/portfolio-websites/Gemiddelde-berekenen/style.css
+++ b/portfolio/portfolio-websites/Gemiddelde-berekenen/style.css
@@ -12,8 +12,10 @@
 
 * {
     color: #ffffffff;
-    margin-top: 5px;
+    margin-top: 0px;
     text-align: center;
+
+    --selective-yellow: #FFB703;
 }
 
 *:not(p, h1) {
@@ -21,7 +23,19 @@
 }
 
 body {
-    background: #333;
+    background: linear-gradient(to bottom right, #333, #344);
+    background-attachment: fixed;
+    margin: 0px;
+    display: flex;
+    justify-content: center;
+}
+
+.body {
+    margin-top: 200px;
+    background-color: #444;
+    width: 600px;
+    padding: 20px;
+    border-radius: 20px;
 }
 
 input {
@@ -31,20 +45,25 @@ input {
 
 [coolbutton] {
     background-color: #fff;
-    margin-top: 10px;
+    margin: 20px 0 10px 0;
     width: 200px;
     height: 50px;
     font-size: 20pt;
     border-radius: 1000px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    transition: all 0.2s ease;
+    border: none;
 }
 
 [coolbutton]:hover {
-    background-color: #666;
+    background-color: rgb(80, 159, 159);
+}
+
+[coolbutton]:active {
+    background-color: rgb(38, 70, 70);
 }
 
 p {
-    margin: 0;
+    margin: 5px 0;
 }
 
 .result {
@@ -64,4 +83,31 @@ textarea {
     resize:none;
     background: #666;
     color: white;
+}
+
+/* Language switcher style */
+.language-switcher {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    color: white;
+    display: flex;
+    width: 100px;
+    margin-right: 0px;
+}
+
+.language-switcher > a {
+    text-decoration: none;
+    color: white;
+    margin: 10px;
+}
+
+.language-switcher > a:hover {
+    text-decoration: underline;
+}
+
+[vert-line] {
+    margin-top: 5px;
+    border-left: 3px solid white;
+    height: 30px;
 }
