--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -109,7 +109,7 @@ body {
     padding: 0;
     margin: 0 auto;
     z-index: 0;
-    object-fit: fill;
+    object-fit:cover;
 }
 
 /* Link style cancelling */
@@ -132,52 +132,38 @@ a{
     position: relative;
     background: rgba(255,255,255,0.3);
     color: black;
-}
+    transition: color 0.5s ease, 
+                background-color 0.5s ease,
+                box-shadow 0.5s ease;
+}     
 
 /* Hover FX */
 
 .tile1 > a:hover > .portfolio-desc {
-    background-color: #333;
-    color: var(--selective-yellow);
-    box-shadow: 0 30px 100px var(--selective-yellow);
-    /* Makes sure the box-shadow is above the image*/
+    background-color: rgb(80, 159, 159);
+    color: #344;
+    box-shadow: 0 30px 100px rgb(80, 159, 159);
     z-index: 1;
 }
 
 .tile2 > a:hover > .portfolio-desc {
     background-color: rgba(255, 60, 106, 0.849);
-    box-shadow: 0 30px 100px rgba(255, 60, 106, 1);
-    /* Makes sure the box-shadow is above the image*/
     z-index: 1;
 }
 
 .tile3 > a:hover > .portfolio-desc {
+    
     background-color: #000;
     color: #0f0;
     box-shadow: 0 30px 100px #0f0;
     border-top: 1px solid rgb(0, 122, 0);
-    /* Makes sure the box-shadow is above the image*/
     z-index: 1;
 }
-
-/* Individual tile styling */
-
-.tile1 {
-    padding-top:-100px;
-}
-
-/*.tile2 {
-    background-color: #fff;
-}
-
-.tile3 {
-    background-color: #000;
-}/*
 
 /* Desc in the individual tiles*/
 
 .tile1 > a > .portfolio-desc {
-    
+    animation: tile1anim 0.5s ease-in-out 0 1 forwards;
     box-shadow: 0 30px 100px white;
     /* Makes sure the box-shadow is above the image*/
     z-index: 1;
@@ -193,4 +179,24 @@ a{
     box-shadow: 0 30px 100px white;
     /* Makes sure the box-shadow is above the image*/
     z-index: 1;
+}
+
+/*@keyframes tile1anim {
+    0%{
+        background-color: rgba(255,255,255,0.3);
+        color: black;
+    }
+    100% {
+        background-color: #333;
+        color: var(--selective-yellow);
+        box-shadow: 0 30px 100px var(--selective-yellow);
+    }
+}
+
+@keyframes tile2anim {
+    
+}
+
+@keyframes tile3anim {
+    
 }
