--- a/portfolio/portfolio-websites/Gemiddelde-berekenen/style.css
+++ b/portfolio/portfolio-websites/Gemiddelde-berekenen/style.css
@@ -36,6 +36,9 @@ body {
     width: 600px;
     padding: 20px;
     border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 input {
@@ -67,15 +70,18 @@ p {
 }
 
 .result {
+    position: relative;
+    display: block;
     background: #666;
     border-radius: 5px;
-    width: 100px;
-    height: 50px;
-    padding-top: 15px;
-    margin-left: calc(50% - (100px / 2));
+    width: auto;
+    height: 40px;
+    padding: 10px;
+    padding-bottom: 5px;
     font-size: 20pt;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
+    justify-self: center;
 }
 
 
