--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -139,26 +139,26 @@ a{
     background: rgba(255,255,255,0.3);
     color: black;
     transition: color 0.5s ease, 
-                background-color 0.5s ease,
+                background 0.5s ease,
                 box-shadow 0.5s ease;
 }     
 
 /* Hover FX */
 
 .tile1 > a:hover > .portfolio-desc {
-    background-color: rgb(80, 159, 159);
+    background: rgb(80, 159, 159);
     color: #344;
     box-shadow: 0 30px 100px rgb(80, 159, 159);
     z-index: 1;
 }
 
 .tile2 > a:hover > .portfolio-desc {
-    background-color: rgba(255, 60, 106, 0.849);
+    background: rgba(255, 60, 106, 0.849);
     z-index: 1;
 }
 
 .tile3 > a:hover > .portfolio-desc {
-    background-color: #000;
+    background: #000;
     color: #0f0;
     box-shadow: 0 30px 100px #0f0;
     border-top: 1px solid rgb(0, 122, 0);
@@ -166,9 +166,16 @@ a{
 }
 
 .tile4 > a:hover > .portfolio-desc {
-    background-color: var(--indigo--dye);
+    background: var(--indigo--dye);
     color: var(--platinum);
     box-shadow: 0 30px 100px var(--indigo--dye);
+    z-index: 1;
+}
+
+.tile5 > a:hover > .portfolio-desc {
+    background: linear-gradient(to right, blue, purple);
+    color: var(--platinum);
+    box-shadow: 0 30px 100px blue;
     z-index: 1;
 }
 
