--- a/portfolio/portfolio-websites/To-do-list/style.css
+++ b/portfolio/portfolio-websites/To-do-list/style.css
@@ -1,12 +1,48 @@
-* {
-    font-family: Helvetica, sans-serif;
-    margin: 10px;
+.crossed {
+    text-decoration: line-through;
 }
 
-.heading {
-    font-size: 50pt;
+body {
+    display: flex;
+    justify-content: center;
+    background: linear-gradient(to bottom right, rgb(132, 132, 248), rgb(255, 71, 255));
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.todolist-div {
-    margin-top: 510px;
+.body {
+    background-color: #fff;
+    padding: 50px;
+    width: 300px;
+    border-radius: 20px;
+    text-align: center;
+}
+
+.list-item {
+    font-family: Arial;
+}
+
+.checked {
+    background-color: #000;
+}
+
+.check-button {
+    padding: 0px;
+    color: black;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    border-radius: 5px;
+    margin-right: 10px;
+}
+
+.delete-button {
+    margin-left: 5px;
+    font-size: large;
+    color: red;
+    background: #fff;
+    cursor: pointer;
+    border: none;
 }
