--- a/portfolio/portfolio-websites/digital-clock/style-clock.css
+++ b/portfolio/portfolio-websites/digital-clock/style-clock.css
@@ -8,7 +8,7 @@
 body{
     background-color: #000;
     font-family: seg;
-    font-size: 50pt;
+    font-size: 100pt;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -29,4 +29,10 @@ h2{
 ::selection {
     color: #0f0;
     background-color: rgb(0, 158, 0);
+}
+
+button {
+    color: #fff;
+    border-radius: 0;
+    background: rgb(255, 55, 55);
 }
