--- a/portfolio/portfolio-websites/bmi/style.css
+++ b/portfolio/portfolio-websites/bmi/style.css
@@ -99,3 +99,24 @@ h1 {
 /* Removes the unneeded space after the H3 and before the H6 */
 .warning {margin-top:0;}
 #bmi-text {margin-bottom: 0;}
+
+/* Language switcher CSS */
+.language {
+    position: absolute;
+    height: 20px;
+    background-color: #ffffff;
+    padding: 5px;
+    border-radius: 20px;
+    top: 10px;
+    right: 10px;
+}
+
+a, .selector {
+    text-decoration-line: none;
+    color: #000;
+    margin: 0;
+}
+
+p {
+    margin: 0;
+}
