--- a/portfolio/portfolio-websites/love-tester/style.css
+++ b/portfolio/portfolio-websites/love-tester/style.css
@@ -19,12 +19,15 @@ body {
 
 .container {
     padding: 10px;
+    width: 400px;
+
 
     backdrop-filter: blur(20px);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     background: rgba(255, 255, 255, 0.2);
     border: 1px solid rgba(255, 255, 255, 0.3);
+    text-align: center;
 }
 
 input {
@@ -37,9 +40,21 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-size: 20pt;
+}
+
+input[type=text] {
+    font-size: 20pt;
+    width: 150px;
 }
 
 button[type=submit] {
     background: red;
     border: 1px solid black;
+    font-size: 20pt;
+    font-family: 'love';
+}
+
+.result-love {
+    font-size: 50pt;
 }
