--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -200,6 +200,14 @@ a{
     z-index: 1;
 }
 
+.tile9 > a:hover > .portfolio-desc {
+    background: rgb(255, 0, 115);
+    color: var(--platinum);
+    box-shadow: 0 30px 100px rgb(209, 26, 255);
+    z-index: 1;
+}
+
+
 /* Desc in the individual tiles*/
 
 .tile1 > a > .portfolio-desc {
@@ -246,6 +254,12 @@ a{
 }
 
 .tile8 > a > .portfolio-desc {
+    box-shadow: 0 30px 100px white;
+    /* Makes sure the box-shadow is above the image*/
+    z-index: 1;
+}
+
+.tile9 > a > .portfolio-desc {
     box-shadow: 0 30px 100px white;
     /* Makes sure the box-shadow is above the image*/
     z-index: 1;
